# maroon.github.io

./: .gitignore  cabal.project  config.yaml  feed.xml  index.html  maroon.cabal  site.hs  solarized-light.theme
about/: index.html
assets/: main.css
posts/: 2016-10-31-swift-package-manager-and-generics.md  2017-10-14-swift-reusable-codable-structures.md  2018-08-31-hakyll-sass-dependency.md  2018-10-02-hakyll-routes.md  2018-11-08-localizing-transformations-in-swift.md  2018-11-08-swift-localizing-transformations.md  2018-12-11-deploying-static-content-with-hakyll.md
scss/novella/: _base.scss  _font.scss  _layout.scss  _placeholders.scss  _syntax.scss
site/: about.md  config.yaml  index.html  tags.html
site/posts/: 2016-10-31-swift-package-manager-and-generics.md  2017-10-14-swift-reusable-codable-structures.md  2018-11-08-localizing-transformations-in-swift.md  2018-12-11-deploying-static-content-with-hakyll.md
site/scss/: novella.scss
src/: Archive.hs  Config.hs  Contexts.hs  Feed.hs  Main.hs  Routes.hs  Rules.hs  ScssCompiler.hs  Site.hs  archive.hs  config.hs  site.hs
tags/: index.html
tags/codable/: index.html
tags/generics/: index.html
tags/hakyll/: index.html
tags/haskell/: index.html
tags/novella/: index.html
tags/performance/: index.html
tags/sass/: index.html
tags/swift/: index.html
tags/swift-package-manager/: index.html
templates/: archive.html
templates/archive/: body.html
templates/post/: body.html  header.html
templates/site/: footer.html  head.html  header.html
templates/social/: email.html  github.html  rss.html  (+1 more)
(+33 files in other folders)
