name:               maroon
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:            site.hs
  ghc-options:        -Wall
  ghc-options:        -threaded
  default-language:   Haskell2010
  build-depends:
      base == 4.11.*
    , containers >= 0.3 && < 0.6
    , filepath >= 1.4 && < 1.5
    , hakyll >= 4.12 && < 4.13
    , time >= 1.8 && < 1.10
    , time-locale-compat >= 0.1 && < 0.2
    , yaml >= 0.8 && < 0.9
