cabal-version:      2.4

name:               maroon
version:            0.1.0.0

executable site
  main-is:            Site.hs
  hs-source-dirs:     src
  ghc-options:        -Wall -threaded
  default-language:   Haskell2010
  build-depends:
      base               ^>= 4.12
    , containers         ^>= 0.6
    , filepath           ^>= 1.4
    , hakyll             ^>= 4.12
    , time               ^>= 1.8
    , time-locale-compat ^>= 0.1
    , yaml               ^>= 0.11
  other-modules:
      Archive
    , Config
    , Contexts
    , Feed
    , Routes
    , ScssCompiler
